--- a/env/requirements.txt
+++ b/env/requirements.txt
@@ -1,4 +1,95 @@
-pyinquirer==1.0.3
+adal==1.2.2
+applicationinsights==0.11.9
+asn1crypto==1.3.0
+autopep8==1.4.4
+azure-common==1.1.25
+azure-core==1.3.0
+azure-graphrbac==0.61.1
+azure-identity==1.3.0
+azure-mgmt-authorization==0.60.0
+azure-mgmt-containerregistry==2.8.0
+azure-mgmt-keyvault==2.1.1
+azure-mgmt-resource==8.0.1
+azure-mgmt-storage==8.0.0
+azureml-automl-core==1.1.5.1
+azureml-core==1.1.5.5
+azureml-dataprep==1.3.5
+azureml-dataprep-native==14.1.0
+azureml-pipeline==1.1.5
+azureml-pipeline-core==1.1.5
+azureml-pipeline-steps==1.1.5
+azureml-sdk==1.1.5.1
+azureml-telemetry==1.1.5.3
+azureml-train==1.1.5
+azureml-train-automl-client==1.1.5.1
+azureml-train-core==1.1.5
+azureml-train-restclients-hyperdrive==1.1.5
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+beautifulsoup4==4.8.2
+bs4==0.0.1
+certifi==2019.11.28
+cffi==1.13.2
+chardet==3.0.4
+Click==7.0
+cloudpickle==1.3.0
+contextlib2==0.6.0.post1
+cryptography==2.8
+distro==1.4.0
+docker==4.2.0
+dotnetcore2==2.1.13
+entrypoints==0.3
+flake8==3.7.9
+Flask==1.1.1
+fusepy==3.0.1
+idna==2.8
+isodate==0.6.0
+itsdangerous==1.1.0
+jeepney==0.4.3
+Jinja2==2.11.0
+jmespath==0.9.5
 joblib==0.14.1
+jsonpickle==1.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mkl-fft==1.0.15
+mkl-random==1.1.0
+mkl-service==2.3.0
+msal==1.1.0
+msal-extensions==0.1.3
+msrest==0.6.11
+msrestazure==0.6.3
+mysql-connector==2.2.9
+ndg-httpsclient==0.5.1
 numpy==1.18.1
-pandas
+oauthlib==3.1.0
+pandas==1.0.0
+pathspec==0.7.0
+pep8==1.7.1
+portalocker==1.5.2
+prompt-toolkit==1.0.14
+pyasn1==0.4.8
+pycodestyle==2.5.0
+pycparser==2.19
+pyflakes==2.1.1
+Pygments==2.5.2
+PyInquirer==1.0.3
+PyJWT==1.7.1
+pyOpenSSL==19.1.0
+PySocks==1.7.1
+python-dateutil==2.8.1
+pytz==2019.3
+regex==2020.1.8
+requests==2.22.0
+requests-oauthlib==1.3.0
+ruamel.yaml==0.15.89
+scikit-learn==0.22.1
+scipy==1.3.2
+SecretStorage==3.1.2
+six==1.14.0
+soupsieve==1.9.5
+urllib3==1.25.8
+wcwidth==0.1.8
+websocket-client==0.57.0
+Werkzeug==0.16.1
+xgboost==0.90
