--- a/env/environment.yml
+++ b/env/environment.yml
@@ -1,6 +1,7 @@
 name: real-estate
 channels:
   - defaults
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=main
   - asn1crypto=1.3.0=py37_0
@@ -31,6 +32,7 @@ dependencies:
   - numpy=1.18.1=py37h4f9e942_0
   - numpy-base=1.18.1=py37hde5b4d6_1
   - openssl=1.1.1d=h7b6447c_3
+  - pandas=0.23.4
   - pip=20.0.2=py37_0
   - pycodestyle=2.5.0=py37_0
   - pycparser=2.19=py37_0
