--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.gitignore.io/api/git,python,windows,jupyternotebooks,visualstudiocode
-# Edit at https://www.gitignore.io/?templates=git,python,windows,jupyternotebooks,visualstudiocode
+# Created by https://www.gitignore.io/api/git,linux,python,windows,jupyternotebooks,visualstudiocode
+# Edit at https://www.gitignore.io/?templates=git,linux,python,windows,jupyternotebooks,visualstudiocode
 
 ### Git ###
 # Created by git for backups. To disable backups in Git:
@@ -30,6 +30,21 @@ ipython_config.py
 
 # Remove previous ipynb_checkpoints
 #   git rm -r .ipynb_checkpoints/
+
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
@@ -137,8 +152,11 @@ dmypy.json
 .pyre/
 
 ### VisualStudioCode ###
-.vscode/
-
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
@@ -170,10 +188,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/git,python,windows,jupyternotebooks,visualstudiocode
-<<<<<<< HEAD
-
-
-ideas.md
-=======
->>>>>>> develop
+# End of https://www.gitignore.io/api/git,linux,python,windows,jupyternotebooks,visualstudiocode
